add confirmation dialog

--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -28,6 +28,9 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    debugCompile project(path: ':library', configuration: 'debug')
+    releaseCompile project(path: ':library', configuration: 'release')
 }
 
 buildscript {
