--- a/samples/src/main/AndroidManifest.xml
+++ b/samples/src/main/AndroidManifest.xml
@@ -17,5 +17,7 @@
         </activity>
         <activity
             android:name="com.simplemobiletools.commons.activities.AboutActivity"/>
+        <activity
+            android:name="com.simplemobiletools.commons.activities.LicenseActivity"/>
     </application>
 </manifest>
