--- a/samples/src/main/AndroidManifest.xml
+++ b/samples/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/commons_launcher"
         android:label="@string/smtco_app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
