--- a/samples/src/main/AndroidManifest.xml
+++ b/samples/src/main/AndroidManifest.xml
@@ -19,5 +19,7 @@
             android:name="com.simplemobiletools.commons.activities.AboutActivity"/>
         <activity
             android:name="com.simplemobiletools.commons.activities.LicenseActivity"/>
+        <activity
+            android:name="com.simplemobiletools.commons.activities.CustomizationActivity"/>
     </application>
 </manifest>
