add a script for proper library upload to bintray FINALLY :disappointed::gun:

--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -44,3 +44,5 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
     }
 }
+
+apply from: '../bintray-upload.gradle'
