--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.github.yukuku:ambilwarna:2.0.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.booking:rtlviewpager:1.0.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
