--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 }
 
 buildscript {
-    ext.kotlin_version = '1.1.1'
+    ext.kotlin_version = '1.1.2-5'
     repositories {
         mavenCentral()
     }
