--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,5 @@ ext {
     propTargetSdkVersion = propCompileSdkVersion
     propVersionCode = 1
     propVersionName = '2.21.12'
+    kotlin_version = '1.1.2-5'
 }
