--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,6 @@ ext {
     propMinSdkVersion = 16
     propTargetSdkVersion = propCompileSdkVersion
     propVersionCode = 1
-    propVersionName = '2.21.16'
-    kotlin_version = '1.1.2-5'
+    propVersionName = '2.21.17'
+    kotlin_version = '1.1.3'
 }
