add a new string for disabling Temporarily showing hidden media

--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile "com.android.support:appcompat-v7:$support_libs"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     compile project(':commons')
