--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -26,8 +26,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile "com.android.support:design:$support_libs"
+    compile "com.android.support:appcompat-v7:$support_libs"
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     compile 'com.booking:rtlviewpager:1.0.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
