--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,6 @@ ext {
     propTargetSdkVersion = propCompileSdkVersion
     propVersionCode = 1
     propVersionName = '2.22.4'
-    kotlin_version = '1.1.3'
+    kotlin_version = '1.1.3-2'
     support_libs = '25.3.1'
 }
