--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:$support_libs"
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     compile 'com.booking:rtlviewpager:1.0.1'
+    compile 'com.andrognito.patternlockview:patternlockview:1.0.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
 }
