--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,6 @@ ext {
     propTargetSdkVersion = propCompileSdkVersion
     propVersionCode = 1
     propVersionName = '2.28.3'
-    kotlin_version = '1.1.4-3'
+    kotlin_version = '1.1.50'
     support_libs = '25.3.1'
 }
