--- a/commons/src/main/AndroidManifest.xml
+++ b/commons/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.simplemobiletools.commons"/>
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.simplemobiletools.commons">
+
+    <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
+</manifest>
