--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:4.0.0'
     compile 'com.booking:rtlviewpager:1.0.1'
     compile 'com.andrognito.patternlockview:patternlockview:1.0.0'
+    compile 'com.github.ajalt.reprint:core:3.1.0@aar'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
