--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.andrognito.patternlockview:patternlockview:1.0.0'
     compile 'com.github.ajalt.reprint:core:3.2.0@aar'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.bignerdranch.android:recyclerview-multiselect:0.2'
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
 }
