update some gradle things to reflect Android Studio 3 changes

--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -27,19 +27,8 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:$support_libs"
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "com.android.support:appcompat-v7:$support_libs"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    compile project(':commons')
-}
-
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
-    }
+    implementation project(':commons')
 }
