--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        propBuildToolsVersion = '27.0.1'
+        propCompileSdkVersion = 27
+        propMinSdkVersion = 16
+        propTargetSdkVersion = propCompileSdkVersion
+        propVersionCode = 1
+        propVersionName = '2.40.0'
+        kotlin_version = '1.1.60'
+        support_libs = '27.0.1'
+    }
+
     repositories {
         jcenter()
-        maven { url 'https://maven.google.com' }
+        google()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,22 +31,11 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url 'https://maven.google.com' }
+        google()
         maven { url 'https://jitpack.io' }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-ext {
-    propBuildToolsVersion = '27.0.1'
-    propCompileSdkVersion = 27
-    propMinSdkVersion = 16
-    propTargetSdkVersion = propCompileSdkVersion
-    propVersionCode = 1
-    propVersionName = '2.39.10'
-    kotlin_version = '1.1.60'
-    support_libs = '27.0.1'
 }
