--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -27,27 +27,16 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:design:$support_libs"
-    compile "com.android.support:appcompat-v7:$support_libs"
-    compile 'com.github.bumptech.glide:glide:4.3.1'
-    compile 'com.booking:rtlviewpager:1.0.1'
-    compile 'com.andrognito.patternlockview:patternlockview:1.0.0'
-    compile 'com.github.ajalt.reprint:core:3.2.0@aar'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'com.bignerdranch.android:recyclerview-multiselect:0.2'
+    implementation "com.android.support:design:$support_libs"
+    implementation "com.android.support:appcompat-v7:$support_libs"
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
+    implementation 'com.booking:rtlviewpager:1.0.1'
+    implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'com.bignerdranch.android:recyclerview-multiselect:0.2'
+    api 'com.github.ajalt.reprint:core:3.2.0@aar'
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
-}
-
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
-    }
 }
 
 apply from: '../bintray-upload.gradle'
