--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion propCompileSdkVersion
@@ -36,7 +37,7 @@ dependencies {
     implementation 'com.bignerdranch.android:recyclerview-multiselect:0.2'
     api 'com.github.ajalt.reprint:core:3.2.0@aar'
 
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
+    kapt 'com.github.bumptech.glide:compiler:4.3.1'
 }
 
 apply from: '../bintray-upload.gradle'
