--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -28,14 +28,14 @@ android {
 }
 
 dependencies {
-    implementation "com.android.support:design:$support_libs"
-    implementation "com.android.support:appcompat-v7:$support_libs"
-    implementation 'com.github.bumptech.glide:glide:4.3.1'
-    implementation 'com.booking:rtlviewpager:1.0.1'
-    implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'com.bignerdranch.android:recyclerview-multiselect:0.2'
-    api 'com.github.ajalt.reprint:core:3.2.0@aar'
+    compile "com.android.support:design:$support_libs"
+    compile "com.android.support:appcompat-v7:$support_libs"
+    compile 'com.github.bumptech.glide:glide:4.3.1'
+    compile 'com.booking:rtlviewpager:1.0.1'
+    compile 'com.andrognito.patternlockview:patternlockview:1.0.0'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.bignerdranch.android:recyclerview-multiselect:0.2'
+    compile 'com.github.ajalt.reprint:core:3.2.0@aar'
 
     kapt 'com.github.bumptech.glide:compiler:4.3.1'
 }
