--- a/commons/src/main/AndroidManifest.xml
+++ b/commons/src/main/AndroidManifest.xml
@@ -1,2 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.simplemobiletools.commons"/>
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.simplemobiletools.commons">
+
+    <application>
+        <receiver
+            android:name=".receivers.SharedThemeReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.simplemobiletools.commons.SHARED_THEME_ACTIVATED"/>
+                <action android:name="com.simplemobiletools.commons.SHARED_THEME_UPDATED"/>
+            </intent-filter>
+        </receiver>
+    </application>
+</manifest>
