--- a/samples/src/main/AndroidManifest.xml
+++ b/samples/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.simplemobiletools.commons.activities.FAQActivity"/>
         <activity
             android:name="com.simplemobiletools.commons.activities.AboutActivity"/>
         <activity
