--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -28,12 +28,12 @@ android {
 dependencies {
     compile "com.android.support:design:$support_libs"
     compile "com.android.support:appcompat-v7:$support_libs"
-    compile 'com.github.bumptech.glide:glide:4.6.1'
-    compile 'com.booking:rtlviewpager:1.0.1'
-    compile 'com.andrognito.patternlockview:patternlockview:1.0.0'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'com.bignerdranch.android:recyclerview-multiselect:0.2'
-    compile 'com.github.ajalt.reprint:core:3.2.0@aar'
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    implementation 'com.booking:rtlviewpager:1.0.1'
+    implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation 'com.bignerdranch.android:recyclerview-multiselect:0.2'
+    compile 'com.github.ajalt.reprint:core:3.2.1@aar'
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 }
