--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.bignerdranch.android:recyclerview-multiselect:0.2'
+    implementation 'com.google.code.gson:gson:2.8.2'
     compile 'com.github.ajalt.reprint:core:3.2.1@aar'
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
