--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion propCompileSdkVersion
+    buildToolsVersion propBuildToolsVersion
 
     defaultConfig {
         minSdkVersion propMinSdkVersion
