--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -27,17 +27,16 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:design:$support_libs"
-    compile "com.android.support:appcompat-v7:$support_libs"
+    implementation "com.android.support:design:$support_libs"
+    implementation "com.android.support:appcompat-v7:$support_libs"
     implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1' //kapt annotationProcessor?
     implementation 'com.booking:rtlviewpager:1.0.1'
     implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.bignerdranch.android:recyclerview-multiselect:0.2'
-    implementation 'com.google.code.gson:gson:2.8.2'
-    compile 'com.github.ajalt.reprint:core:3.2.1@aar'
-
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.github.ajalt.reprint:core:3.2.1@aar'
 }
 
 apply from: '../bintray-upload.gradle'
