--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion propCompileSdkVersion
@@ -29,7 +30,7 @@ android {
 dependencies {
     compile "com.android.support:design:$support_libs"
     compile "com.android.support:appcompat-v7:$support_libs"
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.booking:rtlviewpager:1.0.1'
     implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -37,7 +38,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     compile 'com.github.ajalt.reprint:core:3.2.1@aar'
 
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+    kapt 'com.github.bumptech.glide:compiler:4.8.0'
 }
 
 apply from: '../bintray-upload.gradle'
