--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -28,8 +28,8 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:design:$support_libs"
-    compile "com.android.support:appcompat-v7:$support_libs"
+    compile 'com.google.android.material:material:1.0.0'
+    compile 'androidx.appcompat:appcompat:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.booking:rtlviewpager:1.0.1'
     implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
