--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -28,15 +28,15 @@ android {
 }
 
 dependencies {
-    compile 'com.google.android.material:material:1.0.0'
-    compile 'androidx.appcompat:appcompat:1.0.0'
+    api 'androidx.appcompat:appcompat:1.0.0'
+    api 'com.github.ajalt.reprint:core:3.2.1@aar'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.booking:rtlviewpager:1.0.1'
     implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.bignerdranch.android:recyclerview-multiselect:0.2'
     implementation 'com.google.code.gson:gson:2.8.2'
-    compile 'com.github.ajalt.reprint:core:3.2.1@aar'
+    implementation 'androidx.recyclerview:recyclerview-selection:1.0.0'
 
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
 }
