--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -32,10 +32,10 @@ dependencies {
     api 'com.github.ajalt.reprint:core:3.2.1@aar'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
-    implementation 'com.booking:rtlviewpager:1.0.1'
     implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.duolingo.open:rtl-viewpager:1.0.3'
 
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
 }
