--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -28,4 +28,5 @@ android {
 
 dependencies {
     implementation project(':commons')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
