--- a/bintray-upload.gradle
+++ b/bintray-upload.gradle
@@ -7,31 +7,29 @@ group = "com.simplemobiletools"
 version = propVersionName
 
 install {
-    repositories.mavenInstaller {
-        pom.project {
-            packaging 'aar'
-            name 'Simple Commons'
-            description = 'Some helper functions, dialogs etc used by multiple simple apps.'
-            url siteUrl
+    repositories.mavenInstaller.pom.project {
+        packaging 'aar'
+        name 'Simple Commons'
+        description = 'Some helper functions, dialogs, etc. used by my "simple" apps.'
+        url siteUrl
 
-            licenses {
-                license {
-                    name 'The Apache Software License, Version 2.0'
-                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                }
+        licenses {
+            license {
+                name 'The Apache Software License, Version 2.0'
+                url 'https://www.apache.org/licenses/LICENSE-2.0.txt'
             }
-            developers {
-                developer {
-                    id 'tibbi'
-                    name 'Tibor Kaputa'
-                    email 'hello@simplemobiletools.com'
-                }
+        }
+        developers {
+            developer {
+                id 'tibbi'
+                name 'Tibor Kaputa'
+                email 'hello@simplemobiletools.com'
             }
-            scm {
-                connection gitUrl
-                developerConnection gitUrl
-                url siteUrl
-            }
+        }
+        scm {
+            connection gitUrl
+            developerConnection gitUrl
+            url siteUrl
         }
     }
 }
@@ -46,7 +44,7 @@ artifacts {
 }
 
 Properties properties = new Properties()
-properties.load(project.rootProject.file('local.properties').newDataInputStream())
+properties.load project.rootProject.file('local.properties').newDataInputStream()
 
 bintray {
     user = properties.getProperty("bintray.user")
