--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -25,19 +25,28 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+
+    compileOptions {
+        encoding = 'UTF-8'
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    api 'androidx.appcompat:appcompat:1.0.2'
-    api 'com.github.ajalt.reprint:core:3.2.1@aar'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.duolingo.open:rtl-viewpager:1.0.3'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlin_version}"
 
+    api 'androidx.appcompat:appcompat:1.1.0-alpha01'
+    implementation 'androidx.exifinterface:exifinterface:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha02'
+
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
+
+    api 'com.github.ajalt.reprint:core:3.2.1@aar' //3.3.0
+    implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.duolingo.open:rtl-viewpager:1.0.3'
 }
 
 apply from: '../bintray-upload.gradle'
