--- a/commons/src/main/AndroidManifest.xml
+++ b/commons/src/main/AndroidManifest.xml
@@ -3,6 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.simplemobiletools.commons">
 
+    <uses-feature
+        android:name="android.hardware.faketouch"
+        android:required="false"/>
+
+    <uses-feature
+        android:name="android.hardware.screen.portrait"
+        android:required="false"/>
+
     <application>
         <receiver
             android:name=".receivers.SharedThemeReceiver"
