replacing the facebook and reddit png icons with vectors

--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -12,6 +12,7 @@ android {
         targetSdkVersion propTargetSdkVersion
         versionCode propVersionCode
         versionName propVersionName
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
