--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -23,6 +23,7 @@ android {
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
+        test.java.srcDirs += "src/test/kotlin"
     }
 }
 
@@ -43,6 +44,11 @@ dependencies {
     api 'com.github.bumptech.glide:glide:4.10.0'
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+
+    // Test library
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'com.android.support:support-annotations:28.0.0'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
 }
 
 apply from: '../bintray-upload.gradle'
