--- a/commons/src/main/AndroidManifest.xml
+++ b/commons/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.simplemobiletools.commons">
 
+    <queries>
+        <package android:name="com.simplemobiletools.thankyou.debug" />
+        <package android:name="com.simplemobiletools.thankyou" />
+    </queries>
+
     <uses-feature
         android:name="android.hardware.faketouch"
         android:required="false" />
